Corrections and updates for transformers and TieLines